--- a/docs/development/contributing.mdx
+++ b/docs/development/contributing.mdx
@@ -3,8 +3,8 @@ title: 贡献指南
 description: 如何参与Model Context Protocol项目开发
 ---
 
-我们诚挚欢迎社区成员的贡献！请仔细查阅[贡献指南](https://github.com/modelcontextprotocol/.github/blob/main/CONTRIBUTING.md)了解具体的修改提交流程。
+我们诚挚欢迎社区成员的参与贡献！请仔细阅读[贡献指南](https://github.com/modelcontextprotocol/.github/blob/main/CONTRIBUTING.md)了解具体的代码提交规范。
 
-所有贡献者必须遵守我们的[行为准则](https://github.com/modelcontextprotocol/.github/blob/main/CODE_OF_CONDUCT.md)。
+所有贡献者必须遵守我们制定的[行为准则](https://github.com/modelcontextprotocol/.github/blob/main/CODE_OF_CONDUCT.md)。
 
-如需提问或参与讨论，请使用[GitHub Discussions](https://github.com/orgs/modelcontextprotocol/discussions)功能。
+如有任何疑问或希望参与讨论，欢迎使用[GitHub Discussions](https://github.com/orgs/modelcontextprotocol/discussions)功能进行交流。
