--- a/docs/specification/2024-11-05/client/sampling.mdx
+++ b/docs/specification/2024-11-05/client/sampling.mdx
@@ -1,26 +1,18 @@
 ---
-title: Sampling
+title: 采样
 type: docs
 weight: 40
 ---
 
-<Info>**Protocol Revision**: 2024-11-05</Info>
+<Info>**协议修订版本**：2024-11-05</Info>
 
-The Model Context Protocol (MCP) provides a standardized way for servers to request LLM
-sampling ("completions" or "generations") from language models via clients. This flow
-allows clients to maintain control over model access, selection, and permissions while
-enabling servers to leverage AI capabilities&mdash;with no server API keys necessary.
-Servers can request text or image-based interactions and optionally include context from
-MCP servers in their prompts.
+模型上下文协议（MCP）为服务端提供了一种标准化方式，通过客户端向大模型请求采样（"补全"或"生成"）。该流程允许客户端保持对模型访问、选择和权限的控制，同时使服务端能够利用AI能力——无需提供服务器API密钥。服务端可以请求基于文本或图像的交互，并选择性地在提示词中包含来自MCP服务端的上下文。
 
-## User Interaction Model
+## 用户交互模型
 
-Sampling in MCP allows servers to implement agentic behaviors, by enabling LLM calls to
-occur _nested_ inside other MCP server features.
+MCP中的采样功能允许服务端通过在其他MCP服务端功能中_嵌套_调用大模型，实现智能体行为。
 
-Implementations are free to expose sampling through any interface pattern that suits
-their needs&mdash;the protocol itself does not mandate any specific user interaction
-model.
+具体实现可自由选择适合其需求的任何接口模式来暴露采样功能——协议本身并不强制规定任何特定的用户交互模型。
 
 <Warning>
 For trust & safety and security, there **SHOULD** always
@@ -33,10 +25,9 @@ Applications **SHOULD**:
 - Present generated responses for review before delivery
 </Warning>
 
-## Capabilities
+## 能力声明
 
-Clients that support sampling **MUST** declare the `sampling` capability during
-[initialization](/specification/2024-11-05/basic/lifecycle#initialization):
+支持采样的客户端**必须**在[初始化阶段](/specification/2024-11-05/basic/lifecycle#initialization)声明`sampling`能力：
 
 ```json
 {
@@ -46,13 +37,13 @@ Clients that support sampling **MUST** declare the `sampling` capability during
 }
 ```
 
-## Protocol Messages
+## 协议消息
 
-### Creating Messages
+### 创建消息
 
-To request a language model generation, servers send a `sampling/createMessage` request:
+服务端通过发送`sampling/createMessage`请求来申请语言模型生成：
 
-**Request:**
+**请求：**
 
 ```json
 {
@@ -84,7 +75,7 @@ To request a language model generation, servers send a `sampling/createMessage` 
 }
 ```
 
-**Response:**
+**响应：**
 
 ```json
 {
@@ -102,7 +93,7 @@ To request a language model generation, servers send a `sampling/createMessage` 
 }
 ```
 
-## Message Flow
+## 消息流程
 
 ```mermaid
 sequenceDiagram
@@ -130,13 +121,13 @@ sequenceDiagram
     Client-->>Server: Return approved response
 ```
 
-## Data Types
+## 数据类型
 
-### Messages
+### 消息内容
 
-Sampling messages can contain:
+采样消息可包含：
 
-#### Text Content
+#### 文本内容
 
 ```json
 {
@@ -145,7 +136,7 @@ Sampling messages can contain:
 }
 ```
 
-#### Image Content
+#### 图像内容
 
 ```json
 {
@@ -155,36 +146,30 @@ Sampling messages can contain:
 }
 ```
 
-### Model Preferences
+### 模型偏好设置
 
-Model selection in MCP requires careful abstraction since servers and clients may use
-different AI providers with distinct model offerings. A server cannot simply request a
-specific model by name since the client may not have access to that exact model or may
-prefer to use a different provider's equivalent model.
+MCP中的模型选择需要谨慎抽象化处理，因为服务端和客户端可能使用不同AI供应商提供的差异化模型。服务端不能简单地通过名称请求特定模型，因为客户端可能无法访问该确切模型，或更倾向于使用其他供应商的等效模型。
 
-To solve this, MCP implements a preference system that combines abstract capability
-priorities with optional model hints:
+为此，MCP实现了一个结合抽象能力优先级与可选模型提示的偏好系统：
 
-#### Capability Priorities
+#### 能力优先级
 
-Servers express their needs through three normalized priority values (0-1):
+服务端通过三个标准化优先级值（0-1）表达需求：
 
-- `costPriority`: How important is minimizing costs? Higher values prefer cheaper models.
-- `speedPriority`: How important is low latency? Higher values prefer faster models.
-- `intelligencePriority`: How important are advanced capabilities? Higher values prefer
-  more capable models.
+- `costPriority`：成本最小化的重要性？数值越高表示越倾向于廉价模型
+- `speedPriority`：低延迟的重要性？数值越高表示越倾向于快速模型
+- `intelligencePriority`：高级能力的重要性？数值越高表示越倾向于高性能模型
 
-#### Model Hints
+#### 模型提示
 
-While priorities help select models based on characteristics, `hints` allow servers to
-suggest specific models or model families:
+优先级帮助基于特征选择模型，而`hints`允许服务端建议特定模型或模型系列：
 
-- Hints are treated as substrings that can match model names flexibly
-- Multiple hints are evaluated in order of preference
-- Clients **MAY** map hints to equivalent models from different providers
-- Hints are advisory&mdash;clients make final model selection
+- 提示被视为可灵活匹配模型名称的子字符串
+- 多个提示按优先顺序评估
+- 客户端**可以**将提示映射到不同供应商的等效模型
+- 提示仅供参考——客户端拥有最终模型选择权
 
-For example:
+例如：
 
 ```json
 {
@@ -198,15 +183,13 @@ For example:
 }
 ```
 
-The client processes these preferences to select an appropriate model from its available
-options. For instance, if the client doesn't have access to Claude models but has Gemini,
-it might map the sonnet hint to `gemini-1.5-pro` based on similar capabilities.
+客户端根据这些偏好从其可用选项中选择合适模型。例如，如果客户端无法访问Claude模型但拥有Gemini，可能会将sonnet提示映射到`gemini-1.5-pro`（基于相似能力）。
 
-## Error Handling
+## 错误处理
 
-Clients **SHOULD** return errors for common failure cases:
+客户端**应当**为常见故障返回错误：
 
-Example error:
+示例错误：
 
 ```json
 {
@@ -219,10 +202,10 @@ Example error:
 }
 ```
 
-## Security Considerations
+## 安全考量
 
-1. Clients **SHOULD** implement user approval controls
-2. Both parties **SHOULD** validate message content
-3. Clients **SHOULD** respect model preference hints
-4. Clients **SHOULD** implement rate limiting
-5. Both parties **MUST** handle sensitive data appropriately
+1. 客户端**应当**实现用户审批控制
+2. 双方**应当**验证消息内容
+3. 客户端**应当**尊重模型偏好提示
+4. 客户端**应当**实施速率限制
+5. 双方**必须**妥善处理敏感数据
