--- a/docs/specification/2025-03-26/basic/authorization.mdx
+++ b/docs/specification/2025-03-26/basic/authorization.mdx
@@ -1,88 +1,69 @@
 ---
-title: Authorization
+title: 授权
 ---
 
-<Info>**Protocol Revision**: 2025-03-26</Info>
+<Info>**协议修订版本**：2025-03-26</Info>
 
-## 1. Introduction
+## 1. 引言
 
-### 1.1 Purpose and Scope
+### 1.1 目的与范围
 
-The Model Context Protocol provides authorization capabilities at the transport level,
-enabling MCP clients to make requests to restricted MCP servers on behalf of resource
-owners. This specification defines the authorization flow for HTTP-based transports.
+Model Context Protocol（MCP）在传输层提供授权能力，使MCP客户端能够代表资源所有者向受限的MCP服务器发起请求。本规范定义了基于HTTP传输的授权流程。
 
-### 1.2 Protocol Requirements
+### 1.2 协议要求
 
-Authorization is **OPTIONAL** for MCP implementations. When supported:
+授权对MCP实现而言是**可选**功能。当支持授权时：
 
-- Implementations using an HTTP-based transport **SHOULD** conform to this specification.
-- Implementations using an STDIO transport **SHOULD NOT** follow this specification, and
-  instead retrieve credentials from the environment.
-- Implementations using alternative transports **MUST** follow established security best
-  practices for their protocol.
+- 使用基于HTTP传输的实现**应当**遵循本规范
+- 使用STDIO传输的实现**不应**遵循本规范，而应从环境变量获取凭据
+- 使用其他传输协议的实现**必须**遵循该协议既定的安全最佳实践
 
-### 1.3 Standards Compliance
+### 1.3 标准合规性
 
-This authorization mechanism is based on established specifications listed below, but
-implements a selected subset of their features to ensure security and interoperability
-while maintaining simplicity:
+本授权机制基于以下规范构建，但仅实现其功能子集以确保安全性和互操作性，同时保持简洁：
 
-- [OAuth 2.1 IETF DRAFT](https://datatracker.ietf.org/doc/html/draft-ietf-oauth-v2-1-12)
-- OAuth 2.0 Authorization Server Metadata
+- [OAuth 2.1 IETF草案](https://datatracker.ietf.org/doc/html/draft-ietf-oauth-v2-1-12)
+- OAuth 2.0授权服务器元数据
   ([RFC8414](https://datatracker.ietf.org/doc/html/rfc8414))
-- OAuth 2.0 Dynamic Client Registration Protocol
+- OAuth 2.0动态客户端注册协议
   ([RFC7591](https://datatracker.ietf.org/doc/html/rfc7591))
 
-## 2. Authorization Flow
+## 2. 授权流程
 
-### 2.1 Overview
+### 2.1 概述
 
-1. MCP auth implementations **MUST** implement OAuth 2.1 with appropriate security
-   measures for both confidential and public clients.
+1. MCP授权实现**必须**支持OAuth 2.1，并为机密客户端和公共客户端实施适当的安全措施
+2. MCP授权实现**应当**支持OAuth 2.0动态客户端注册协议
+   ([RFC7591](https://datatracker.ietf.org/doc/html/rfc7591))
+3. MCP服务器**应当**且MCP客户端**必须**实现OAuth 2.0授权服务器元数据
+   ([RFC8414](https://datatracker.ietf.org/doc/html/rfc8414))。不支持授权服务器元数据的服务器**必须**遵循默认URI方案
 
-2. MCP auth implementations **SHOULD** support the OAuth 2.0 Dynamic Client Registration
-   Protocol ([RFC7591](https://datatracker.ietf.org/doc/html/rfc7591)).
+### 2.1.1 OAuth授权类型
 
-3. MCP servers **SHOULD** and MCP clients **MUST** implement OAuth 2.0 Authorization
-   Server Metadata ([RFC8414](https://datatracker.ietf.org/doc/html/rfc8414)). Servers
-   that do not support Authorization Server Metadata **MUST** follow the default URI
-   schema.
+OAuth定义了不同的流程（授权类型），这些获取访问令牌的方式适用于不同场景：
 
-### 2.1.1 OAuth Grant Types
+MCP服务器**应当**支持最符合目标用户场景的OAuth授权类型。例如：
 
-OAuth specifies different flows or grant types, which are different ways of obtaining an
-access token. Each of these targets different use cases and scenarios.
+1. 授权码模式：适用于客户端代表（人类）终端用户操作的场景
+   - 例如：代理调用SaaS系统实现的MCP工具
+2. 客户端凭证模式：客户端是另一个应用程序（非人类用户）
+   - 例如：代理调用安全MCP工具查询特定商店库存，无需模拟终端用户
 
-MCP servers **SHOULD** support the OAuth grant types that best align with the intended
-audience. For instance:
+### 2.2 示例：授权码模式
 
-1. Authorization Code: useful when the client is acting on behalf of a (human) end user.
-   - For instance, an agent calls an MCP tool implemented by a SaaS system.
-2. Client Credentials: the client is another application (not a human)
-   - For instance, an agent calls a secure MCP tool to check inventory at a specific
-     store. No need to impersonate the end user.
+本示例演示用于用户认证的OAuth 2.1授权码模式流程。
 
-### 2.2 Example: authorization code grant
+**注意**：以下示例假设MCP服务器同时作为授权服务器运行，但授权服务器也可部署为独立服务。
 
-This demonstrates the OAuth 2.1 flow for the authorization code grant type, used for user
-auth.
+人类用户通过浏览器完成OAuth流程，获取标识其个人身份的访问令牌，使客户端能代表其操作。
 
-**NOTE**: The following example assumes the MCP server is also functioning as the
-authorization server. However, the authorization server may be deployed as its own
-distinct service.
+当需要授权但客户端尚未提供有效凭证时，服务器**必须**返回_HTTP 401 Unauthorized_。
 
-A human user completes the OAuth flow through a web browser, obtaining an access token
-that identifies them personally and allows the client to act on their behalf.
+客户端在收到_HTTP 401 Unauthorized_后应发起
+[OAuth 2.1 IETF草案](https://datatracker.ietf.org/doc/html/draft-ietf-oauth-v2-1-12#name-authorization-code-grant)
+授权流程。
 
-When authorization is required and not yet proven by the client, servers **MUST** respond
-with _HTTP 401 Unauthorized_.
-
-Clients initiate the
-[OAuth 2.1 IETF DRAFT](https://datatracker.ietf.org/doc/html/draft-ietf-oauth-v2-1-12#name-authorization-code-grant)
-authorization flow after receiving the _HTTP 401 Unauthorized_.
-
-The following demonstrates the basic OAuth 2.1 for public clients using PKCE.
+以下示例展示使用PKCE的公共客户端基础OAuth 2.1流程：
 
 ```mermaid
 sequenceDiagram
@@ -104,17 +85,15 @@ sequenceDiagram
     Note over C,M: Begin standard MCP message exchange
 ```
 
-### 2.3 Server Metadata Discovery
+### 2.3 服务器元数据发现
 
-For server capability discovery:
+关于服务器能力发现：
 
-- MCP clients _MUST_ follow the OAuth 2.0 Authorization Server Metadata protocol defined
-  in [RFC8414](https://datatracker.ietf.org/doc/html/rfc8414).
-- MCP server _SHOULD_ follow the OAuth 2.0 Authorization Server Metadata protocol.
-- MCP servers that do not support the OAuth 2.0 Authorization Server Metadata protocol,
-  _MUST_ support fallback URLs.
+- MCP客户端_必须_遵循[RFC8414](https://datatracker.ietf.org/doc/html/rfc8414)定义的OAuth 2.0授权服务器元数据协议
+- MCP服务器_应当_遵循OAuth 2.0授权服务器元数据协议
+- 不支持OAuth 2.0授权服务器元数据协议的MCP服务器_必须_支持回退URL
 
-The discovery flow is illustrated below:
+发现流程如下图所示：
 
 ```mermaid
 sequenceDiagram
@@ -132,33 +111,26 @@ sequenceDiagram
     Note over C: Continue with authorization flow
 ```
 
-#### 2.3.1 Server Metadata Discovery Headers
+#### 2.3.1 服务器元数据发现头部
 
-MCP clients _SHOULD_ include the header `MCP-Protocol-Version: <protocol-version>` during
-Server Metadata Discovery to allow the MCP server to respond based on the MCP protocol
-version.
+MCP客户端_应当_在服务器元数据发现过程中包含`MCP-Protocol-Version: <protocol-version>`头部，以便MCP服务器根据协议版本响应。
 
-For example: `MCP-Protocol-Version: 2024-11-05`
+例如：`MCP-Protocol-Version: 2024-11-05`
 
-#### 2.3.2 Authorization Base URL
+#### 2.3.2 授权基础URL
 
-The authorization base URL **MUST** be determined from the MCP server URL by discarding
-any existing `path` component. For example:
+授权基础URL**必须**通过移除MCP服务器URL中的`path`组件获得。例如：
 
-If the MCP server URL is `https://api.example.com/v1/mcp`, then:
+若MCP服务器URL为`https://api.example.com/v1/mcp`，则：
 
-- The authorization base URL is `https://api.example.com`
-- The metadata endpoint **MUST** be at
-  `https://api.example.com/.well-known/oauth-authorization-server`
+- 授权基础URL为`https://api.example.com`
+- 元数据端点**必须**位于`https://api.example.com/.well-known/oauth-authorization-server`
 
-This ensures authorization endpoints are consistently located at the root level of the
-domain hosting the MCP server, regardless of any path components in the MCP server URL.
+这确保无论MCP服务器URL包含何种路径组件，授权端点始终位于托管MCP服务器的域名根层级。
 
-#### 2.3.3 Fallbacks for Servers without Metadata Discovery
+#### 2.3.3 无元数据发现服务器的回退方案
 
-For servers that do not implement OAuth 2.0 Authorization Server Metadata, clients
-**MUST** use the following default endpoint paths relative to the authorization base URL
-(as defined in [Section 2.3.2](#232-authorization-base-url)):
+对于未实现OAuth 2.0授权服务器元数据的服务器，客户端**必须**使用以下相对于授权基础URL（定义见[章节2.3.2](#232-authorization-base-url)的默认端点路径：
 
 | Endpoint               | Default Path | Description                          |
 | ---------------------- | ------------ | ------------------------------------ |
@@ -166,43 +138,33 @@ For servers that do not implement OAuth 2.0 Authorization Server Metadata, clien
 | Token Endpoint         | /token       | Used for token exchange & refresh    |
 | Registration Endpoint  | /register    | Used for dynamic client registration |
 
-For example, with an MCP server hosted at `https://api.example.com/v1/mcp`, the default
-endpoints would be:
+例如，托管在`https://api.example.com/v1/mcp`的MCP服务器默认端点为：
 
 - `https://api.example.com/authorize`
 - `https://api.example.com/token`
 - `https://api.example.com/register`
 
-Clients **MUST** first attempt to discover endpoints via the metadata document before
-falling back to default paths. When using default paths, all other protocol requirements
-remain unchanged.
+客户端**必须**先尝试通过元数据文档发现端点，再回退到默认路径。使用默认路径时，其他协议要求保持不变。
 
-### 2.4 Dynamic Client Registration
+### 2.4 动态客户端注册
 
-MCP clients and servers **SHOULD** support the
-[OAuth 2.0 Dynamic Client Registration Protocol](https://datatracker.ietf.org/doc/html/rfc7591)
-to allow MCP clients to obtain OAuth client IDs without user interaction. This provides a
-standardized way for clients to automatically register with new servers, which is crucial
-for MCP because:
+MCP客户端和服务器**应当**支持
+[OAuth 2.0动态客户端注册协议](https://datatracker.ietf.org/doc/html/rfc7591)，
+使MCP客户端无需用户交互即可获取OAuth客户端ID。这对MCP至关重要，因为：
 
-- Clients cannot know all possible servers in advance
-- Manual registration would create friction for users
-- It enables seamless connection to new servers
-- Servers can implement their own registration policies
+- 客户端无法预先知晓所有可能的服务器
+- 手动注册会给用户造成阻碍
+- 实现与新服务器的无缝连接
+- 服务器可自定义注册策略
 
-Any MCP servers that _do not_ support Dynamic Client Registration need to provide
-alternative ways to obtain a client ID (and, if applicable, client secret). For one of
-these servers, MCP clients will have to either:
+不支持动态客户端注册的MCP服务器需提供替代方案来获取客户端ID（及客户端密钥）。对于这类服务器，MCP客户端需：
 
-1. Hardcode a client ID (and, if applicable, client secret) specifically for that MCP
-   server, or
-2. Present a UI to users that allows them to enter these details, after registering an
-   OAuth client themselves (e.g., through a configuration interface hosted by the
-   server).
+1. 硬编码专用于该MCP服务器的客户端ID（及客户端密钥），或
+2. 向用户展示配置界面，让其自行输入通过服务器注册接口获取的凭证
 
-### 2.5 Authorization Flow Steps
+### 2.5 授权流程步骤
 
-The complete Authorization flow proceeds as follows:
+完整授权流程如下：
 
 ```mermaid
 sequenceDiagram
@@ -233,7 +195,7 @@ sequenceDiagram
     C->>M: API Requests with Access Token
 ```
 
-#### 2.5.1 Decision Flow Overview
+#### 2.5.1 决策流程概览
 
 ```mermaid
 flowchart TD
@@ -257,27 +219,26 @@ flowchart TD
     N --> O[Use Access Token]
 ```
 
-### 2.6 Access Token Usage
+### 2.6 访问令牌使用
 
-#### 2.6.1 Token Requirements
+#### 2.6.1 令牌要求
 
-Access token handling **MUST** conform to
-[OAuth 2.1 Section 5](https://datatracker.ietf.org/doc/html/draft-ietf-oauth-v2-1-12#section-5)
-requirements for resource requests. Specifically:
+访问令牌处理**必须**符合
+[OAuth 2.1第5章](https://datatracker.ietf.org/doc/html/draft-ietf-oauth-v2-1-12#section-5)
+对资源请求的要求：
 
-1. MCP client **MUST** use the Authorization request header field
-   [Section 5.1.1](https://datatracker.ietf.org/doc/html/draft-ietf-oauth-v2-1-12#section-5.1.1):
+1. MCP客户端**必须**使用Authorization请求头字段
+   [5.1.1节](https://datatracker.ietf.org/doc/html/draft-ietf-oauth-v2-1-12#section-5.1.1)：
 
 ```
 Authorization: Bearer <access-token>
 ```
 
-Note that authorization **MUST** be included in every HTTP request from client to server,
-even if they are part of the same logical session.
+注意：即使属于同一逻辑会话，客户端到服务器的每个HTTP请求**必须**包含授权头。
 
-2. Access tokens **MUST NOT** be included in the URI query string
+2. 访问令牌**禁止**出现在URI查询字符串中
 
-Example request:
+示例请求：
 
 ```http
 GET /v1/contexts HTTP/1.1
@@ -285,28 +246,27 @@ Host: mcp.example.com
 Authorization: Bearer eyJhbGciOiJIUzI1NiIs...
 ```
 
-#### 2.6.2 Token Handling
+#### 2.6.2 令牌处理
 
-Resource servers **MUST** validate access tokens as described in
-[Section 5.2](https://datatracker.ietf.org/doc/html/draft-ietf-oauth-v2-1-12#section-5.2).
-If validation fails, servers **MUST** respond according to
-[Section 5.3](https://datatracker.ietf.org/doc/html/draft-ietf-oauth-v2-1-12#section-5.3)
-error handling requirements. Invalid or expired tokens **MUST** receive a HTTP 401
-response.
+资源服务器**必须**按照
+[5.2节](https://datatracker.ietf.org/doc/html/draft-ietf-oauth-v2-1-12#section-5.2)
+验证访问令牌。验证失败时，服务器**必须**根据
+[5.3节](https://datatracker.ietf.org/doc/html/draft-ietf-oauth-v2-1-12#section-5.3)
+错误处理要求响应。无效或过期的令牌**必须**返回HTTP 401。
 
-### 2.7 Security Considerations
+### 2.7 安全考量
 
-The following security requirements **MUST** be implemented:
+**必须**实现以下安全要求：
 
-1. Clients **MUST** securely store tokens following OAuth 2.0 best practices
-2. Servers **SHOULD** enforce token expiration and rotation
-3. All authorization endpoints **MUST** be served over HTTPS
-4. Servers **MUST** validate redirect URIs to prevent open redirect vulnerabilities
-5. Redirect URIs **MUST** be either localhost URLs or HTTPS URLs
+1. 客户端**必须**遵循OAuth 2.0最佳实践安全存储令牌
+2. 服务器**应当**强制令牌过期和轮换
+3. 所有授权端点**必须**通过HTTPS提供服务
+4. 服务器**必须**验证重定向URI以防止开放重定向漏洞
+5. 重定向URI**必须**为localhost URL或HTTPS URL
 
-### 2.8 Error Handling
+### 2.8 错误处理
 
-Servers **MUST** return appropriate HTTP status codes for authorization errors:
+服务器**必须**为授权错误返回适当的HTTP状态码：
 
 | Status Code | Description  | Usage                                      |
 | ----------- | ------------ | ------------------------------------------ |
@@ -314,32 +274,30 @@ Servers **MUST** return appropriate HTTP status codes for authorization errors:
 | 403         | Forbidden    | Invalid scopes or insufficient permissions |
 | 400         | Bad Request  | Malformed authorization request            |
 
-### 2.9 Implementation Requirements
+### 2.9 实现要求
 
-1. Implementations **MUST** follow OAuth 2.1 security best practices
-2. PKCE is **REQUIRED** for all clients
-3. Token rotation **SHOULD** be implemented for enhanced security
-4. Token lifetimes **SHOULD** be limited based on security requirements
+1. 实现**必须**遵循OAuth 2.1安全最佳实践
+2. 所有客户端**必须**实现PKCE
+3. **应当**实施令牌轮换以增强安全性
+4. **应当**根据安全要求限制令牌生命周期
 
-### 2.10 Third-Party Authorization Flow
+### 2.10 第三方授权流程
 
-#### 2.10.1 Overview
+#### 2.10.1 概述
 
-MCP servers **MAY** support delegated authorization through third-party authorization
-servers. In this flow, the MCP server acts as both an OAuth client (to the third-party
-auth server) and an OAuth authorization server (to the MCP client).
+MCP服务器**可**支持通过第三方授权服务器进行委托授权。在此流程中，MCP服务器同时充当OAuth客户端（对第三方授权服务器）和OAuth授权服务器（对MCP客户端）。
 
-#### 2.10.2 Flow Description
+#### 2.10.2 流程说明
 
-The third-party authorization flow comprises these steps:
+第三方授权流程包含以下步骤：
 
-1. MCP client initiates standard OAuth flow with MCP server
-2. MCP server redirects user to third-party authorization server
-3. User authorizes with third-party server
-4. Third-party server redirects back to MCP server with authorization code
-5. MCP server exchanges code for third-party access token
-6. MCP server generates its own access token bound to the third-party session
-7. MCP server completes original OAuth flow with MCP client
+1. MCP客户端与MCP服务器启动标准OAuth流程
+2. MCP服务器将用户重定向至第三方授权服务器
+3. 用户在第三方服务器完成授权
+4. 第三方服务器携带授权码重定向回MCP服务器
+5. MCP服务器用授权码交换第三方访问令牌
+6. MCP服务器生成绑定第三方会话的自有访问令牌
+7. MCP服务器与MCP客户端完成原始OAuth流程
 
 ```mermaid
 sequenceDiagram
@@ -363,46 +321,40 @@ sequenceDiagram
     M->>C: MCP access token
 ```
 
-#### 2.10.3 Session Binding Requirements
+#### 2.10.3 会话绑定要求
 
-MCP servers implementing third-party authorization **MUST**:
+实现第三方授权的MCP服务器**必须**：
 
-1. Maintain secure mapping between third-party tokens and issued MCP tokens
-2. Validate third-party token status before honoring MCP tokens
-3. Implement appropriate token lifecycle management
-4. Handle third-party token expiration and renewal
+1. 维护第三方令牌与签发MCP令牌的安全映射
+2. 验证第三方令牌状态后再接受MCP令牌
+3. 实施适当的令牌生命周期管理
+4. 处理第三方令牌过期和续订
 
-#### 2.10.4 Security Considerations
+#### 2.10.4 安全考量
 
-When implementing third-party authorization, servers **MUST**:
+实现第三方授权时，服务器**必须**：
 
-1. Validate all redirect URIs
-2. Securely store third-party credentials
-3. Implement appropriate session timeout handling
-4. Consider security implications of token chaining
-5. Implement proper error handling for third-party auth failures
+1. 验证所有重定向URI
+2. 安全存储第三方凭据
+3. 实施适当的会话超时处理
+4. 考虑令牌链式传递的安全影响
+5. 妥善处理第三方授权失败场景
 
-## 3. Best Practices
+## 3. 最佳实践
 
-#### 3.1 Local clients as Public OAuth 2.1 Clients
+#### 3.1 本地客户端作为公共OAuth 2.1客户端
 
-We strongly recommend that local clients implement OAuth 2.1 as a public client:
+强烈建议本地客户端作为公共客户端实现OAuth 2.1：
 
-1. Utilizing code challenges (PKCE) for authorization requests to prevent interception
-   attacks
-2. Implementing secure token storage appropriate for the local system
-3. Following token refresh best practices to maintain sessions
-4. Properly handling token expiration and renewal
+1. 使用代码挑战（PKCE）防止授权请求拦截攻击
+2. 根据本地系统特性实现安全令牌存储
+3. 遵循令牌刷新最佳实践维持会话
+4. 正确处理令牌过期和续订
 
-#### 3.2 Authorization Metadata Discovery
+#### 3.2 授权元数据发现
 
-We strongly recommend that all clients implement metadata discovery. This reduces the
-need for users to provide endpoints manually or clients to fallback to the defined
-defaults.
+强烈建议所有客户端实现元数据发现。这减少用户手动提供端点或客户端回退到默认配置的需求。
 
-#### 3.3 Dynamic Client Registration
+#### 3.3 动态客户端注册
 
-Since clients do not know the set of MCP servers in advance, we strongly recommend the
-implementation of dynamic client registration. This allows applications to automatically
-register with the MCP server, and removes the need for users to obtain client ids
-manually.
+由于客户端无法预知所有MCP服务器，强烈建议实现动态客户端注册。这使应用能自动注册到MCP服务器，避免用户手动获取客户端ID。
