--- a/docs/specification/2025-03-26/changelog.mdx
+++ b/docs/specification/2025-03-26/changelog.mdx
@@ -1,36 +1,24 @@
 ---
-title: Key Changes
+title: 关键变更
 ---
 
-This document lists changes made to the Model Context Protocol (MCP) specification since
-the previous revision, [2024-11-05](/specification/2024-11-05).
+本文档列出了自上一版本 [2024-11-05](/specification/2024-11-05) 以来对 Model Context Protocol (MCP) 规范所做的修改。
 
-## Major changes
+## 重大变更
 
-1. Added a comprehensive **[authorization framework](/specification/2025-03-26/basic/authorization)**
-   based on OAuth 2.1 (PR
-   [#133](https://github.com/modelcontextprotocol/specification/pull/133))
-1. Replaced the previous HTTP+SSE transport with a more flexible **[Streamable HTTP
-   transport](/specification/2025-03-26/basic/transports#streamable-http)** (PR
-   [#206](https://github.com/modelcontextprotocol/specification/pull/206))
-1. Added support for JSON-RPC **[batching](https://www.jsonrpc.org/specification#batch)**
-   (PR [#228](https://github.com/modelcontextprotocol/specification/pull/228))
-1. Added comprehensive **tool annotations** for better describing tool behavior, like
-   whether it is read-only or destructive (PR
-   [#185](https://github.com/modelcontextprotocol/specification/pull/185))
+1. 新增基于 OAuth 2.1 的完整**[授权框架](/specification/2025-03-26/basic/authorization)**（PR [#133](https://github.com/modelcontextprotocol/specification/pull/133)）
+2. 将原有的 HTTP+SSE 传输协议替换为更灵活的**[可流式 HTTP 传输协议](/specification/2025-03-26/basic/transports#streamable-http)**（PR [#206](https://github.com/modelcontextprotocol/specification/pull/206)）
+3. 新增对 JSON-RPC **[批处理](https://www.jsonrpc.org/specification#batch)**的支持（PR [#228](https://github.com/modelcontextprotocol/specification/pull/228)）
+4. 新增完整的**工具注解**功能，用于更精确描述工具行为（如是否只读或具有破坏性）（PR [#185](https://github.com/modelcontextprotocol/specification/pull/185)）
 
-## Other schema changes
+## 其他架构变更
 
-- Added `message` field to `ProgressNotification` to provide descriptive status updates
-- Added support for audio data, joining the existing text and image content types
-- Added `completions` capability to explicitly indicate support for argument
-  autocompletion suggestions
+- 在 `ProgressNotification` 中新增 `message` 字段，用于提供描述性状态更新
+- 新增对音频数据的支持，与现有的文本和图像内容类型并列
+- 新增 `completions` 能力，用于明确表示支持参数自动补全建议
 
-See
-[the updated schema](http://github.com/modelcontextprotocol/specification/tree/main/schema/2025-03-26/schema.ts)
-for more details.
+更多细节请参阅[更新后的架构文件](http://github.com/modelcontextprotocol/specification/tree/main/schema/2025-03-26/schema.ts)。
 
-## Full changelog
+## 完整变更日志
 
-For a complete list of all changes that have been made since the last protocol revision,
-[see GitHub](https://github.com/modelcontextprotocol/specification/compare/2024-11-05...2025-03-26).
+如需查看自上次协议修订以来的所有变更完整列表，请[访问 GitHub](https://github.com/modelcontextprotocol/specification/compare/2024-11-05...2025-03-26)。
