--- a/docs/specification/2025-03-26/index.mdx
+++ b/docs/specification/2025-03-26/index.mdx
@@ -1,132 +1,105 @@
 ---
-title: Specification
+title: 技术规范
 ---
 
-[Model Context Protocol](https://modelcontextprotocol.io) (MCP) is an open protocol that
-enables seamless integration between LLM applications and external data sources and
-tools. Whether you're building an AI-powered IDE, enhancing a chat interface, or creating
-custom AI workflows, MCP provides a standardized way to connect LLMs with the context
-they need.
+[模型上下文协议](https://modelcontextprotocol.io) (MCP) 是一项开放协议，旨在实现大模型应用与外部数据源及工具的无缝集成。无论您正在构建AI驱动的集成开发环境、增强聊天界面功能，还是创建定制化AI工作流，MCP都提供了标准化方法来连接大模型与其所需的上下文环境。
 
-This specification defines the authoritative protocol requirements, based on the
-TypeScript schema in
-[schema.ts](https://github.com/modelcontextprotocol/specification/blob/main/schema/2025-03-26/schema.ts).
+本规范基于[schema.ts](https://github.com/modelcontextprotocol/specification/blob/main/schema/2025-03-26/schema.ts)中的TypeScript模式定义，确立了权威的协议要求。
 
-For implementation guides and examples, visit
-[modelcontextprotocol.io](https://modelcontextprotocol.io).
+如需获取实施指南和示例，请访问[modelcontextprotocol.io](https://modelcontextprotocol.io)。
 
-The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD
-NOT", "RECOMMENDED", "NOT RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be
-interpreted as described in [BCP 14](https://datatracker.ietf.org/doc/html/bcp14)
-[[RFC2119](https://datatracker.ietf.org/doc/html/rfc2119)]
-[[RFC8174](https://datatracker.ietf.org/doc/html/rfc8174)] when, and only when, they
-appear in all capitals, as shown here.
+本文档中出现的"必须"、"禁止"、"必需"、"应"、"不应"、"建议"、"不建议"、"可以"和"可选"等关键词（原文全大写形式）应严格遵循[BCP 14](https://datatracker.ietf.org/doc/html/bcp14)[[RFC2119](https://datatracker.ietf.org/doc/html/rfc2119)][[RFC8174](https://datatracker.ietf.org/doc/html/rfc8174)]标准进行解释。
 
-## Overview
+## 概述
 
-MCP provides a standardized way for applications to:
+MCP为应用程序提供标准化方法来实现：
 
-- Share contextual information with language models
-- Expose tools and capabilities to AI systems
-- Build composable integrations and workflows
+- 与大模型共享上下文信息
+- 向AI系统开放工具和功能
+- 构建可组合的集成与工作流
 
-The protocol uses [JSON-RPC](https://www.jsonrpc.org/) 2.0 messages to establish
-communication between:
+该协议采用[JSON-RPC](https://www.jsonrpc.org/) 2.0消息格式建立以下组件间的通信：
 
-- **Hosts**: LLM applications that initiate connections
-- **Clients**: Connectors within the host application
-- **Servers**: Services that provide context and capabilities
+- **主机**：发起连接的大模型应用
+- **客户端**：主机应用内部的连接器
+- **服务端**：提供上下文和功能的服务
 
-MCP takes some inspiration from the
-[Language Server Protocol](https://microsoft.github.io/language-server-protocol/), which
-standardizes how to add support for programming languages across a whole ecosystem of
-development tools. In a similar way, MCP standardizes how to integrate additional context
-and tools into the ecosystem of AI applications.
+MCP部分灵感来源于[语言服务器协议](https://microsoft.github.io/language-server-protocol/)，后者为整个开发生态系统添加编程语言支持制定了标准。类似地，MCP为AI应用生态系统中的上下文集成和工具接入制定了统一标准。
 
-## Key Details
+## 核心细节
 
-### Base Protocol
+### 基础协议
 
-- [JSON-RPC](https://www.jsonrpc.org/) message format
-- Stateful connections
-- Server and client capability negotiation
+- [JSON-RPC](https://www.jsonrpc.org/)消息格式
+- 有状态连接
+- 服务端与客户端能力协商
 
-### Features
+### 功能特性
 
-Servers offer any of the following features to clients:
+服务端可向客户端提供以下功能：
 
-- **Resources**: Context and data, for the user or the AI model to use
-- **Prompts**: Templated messages and workflows for users
-- **Tools**: Functions for the AI model to execute
+- **资源**：供用户或AI模型使用的上下文数据
+- **提示词**：面向用户的模板化消息和工作流
+- **工具**：供AI模型执行的函数
 
-Clients may offer the following feature to servers:
+客户端可向服务端提供以下功能：
 
-- **Sampling**: Server-initiated agentic behaviors and recursive LLM interactions
+- **采样**：服务端发起的自主行为与递归式大模型交互
 
-### Additional Utilities
+### 辅助功能
 
-- Configuration
-- Progress tracking
-- Cancellation
-- Error reporting
-- Logging
+- 配置管理
+- 进度跟踪
+- 操作取消
+- 错误报告
+- 日志记录
 
-## Security and Trust & Safety
+## 安全与信任保障
 
-The Model Context Protocol enables powerful capabilities through arbitrary data access
-and code execution paths. With this power comes important security and trust
-considerations that all implementors must carefully address.
+模型上下文协议通过任意数据访问和代码执行路径实现强大功能，这也带来了所有实施者必须审慎处理的重要安全与信任问题。
 
-### Key Principles
+### 核心原则
 
-1. **User Consent and Control**
+1. **用户授权与控制**
 
-   - Users must explicitly consent to and understand all data access and operations
-   - Users must retain control over what data is shared and what actions are taken
-   - Implementors should provide clear UIs for reviewing and authorizing activities
+   - 必须获得用户对数据访问和操作的明确授权与理解
+   - 用户必须始终掌握数据共享和操作执行的最终控制权
+   - 实施者应提供清晰的用户界面用于审查和授权活动
 
-2. **Data Privacy**
+2. **数据隐私**
 
-   - Hosts must obtain explicit user consent before exposing user data to servers
-   - Hosts must not transmit resource data elsewhere without user consent
-   - User data should be protected with appropriate access controls
+   - 主机在向服务端开放用户数据前必须获得明确授权
+   - 未经用户同意，主机不得将资源数据传输至其他位置
+   - 应采用适当的访问控制机制保护用户数据
 
-3. **Tool Safety**
+3. **工具安全性**
 
-   - Tools represent arbitrary code execution and must be treated with appropriate
-     caution.
-     - In particular, descriptions of tool behavior such as annotations should be
-       considered untrusted, unless obtained from a trusted server.
-   - Hosts must obtain explicit user consent before invoking any tool
-   - Users should understand what each tool does before authorizing its use
+   - 工具代表任意代码执行，必须谨慎对待
+     - 特别需要注意的是，除非来自可信服务端，否则工具行为描述（如注解）应视为不可信
+   - 主机在调用任何工具前必须获得用户明确授权
+   - 用户应在授权使用前了解每个工具的具体功能
 
-4. **LLM Sampling Controls**
-   - Users must explicitly approve any LLM sampling requests
-   - Users should control:
-     - Whether sampling occurs at all
-     - The actual prompt that will be sent
-     - What results the server can see
-   - The protocol intentionally limits server visibility into prompts
+4. **大模型采样控制**
+   - 必须获得用户对采样请求的明确批准
+   - 用户应能控制：
+     - 是否执行采样
+     - 实际发送的提示词内容
+     - 服务端可见的结果范围
+   - 协议特意限制了服务端对提示词的可见性
 
-### Implementation Guidelines
+### 实施指南
 
-While MCP itself cannot enforce these security principles at the protocol level,
-implementors **SHOULD**:
+虽然MCP无法在协议层面强制实施这些安全原则，但实施者**应当**：
 
-1. Build robust consent and authorization flows into their applications
-2. Provide clear documentation of security implications
-3. Implement appropriate access controls and data protections
-4. Follow security best practices in their integrations
-5. Consider privacy implications in their feature designs
+1. 在应用中构建完善的授权流程
+2. 提供清晰的安全影响说明文档
+3. 实施适当的访问控制和数据保护措施
+4. 在集成过程中遵循安全最佳实践
+5. 在功能设计中充分考虑隐私影响
 
-## Learn More
+## 了解更多
 
-Explore the detailed specification for each protocol component:
-
-<CardGroup cols={5}>
-  <Card title="Architecture" icon="sitemap" href="architecture" />
-  <Card title="Base Protocol" icon="code" href="basic" />
-  <Card title="Server Features" icon="server" href="server" />
-  <Card title="Client Features" icon="user" href="client" />
+探索各协议组件的详细规范：
+<CardGroup>
   <Card title="Contributing" icon="pencil" href="contributing" />
 </CardGroup>
