--- a/docs/docs/tools/inspector.mdx
+++ b/docs/docs/tools/inspector.mdx
@@ -141,4 +141,21 @@ Inspector 提供以下核心功能与您的 MCP 服务器进行交互：
    - 错误处理与响应检查
 
 ## 后续步骤
+
 <CardGroup cols={2}>
+    <Card
+        title="Inspector Repository"
+        icon="github"
+        href="https://github.com/modelcontextprotocol/inspector"
+    >
+        Check out the MCP Inspector source code
+    </Card>
+
+    <Card
+        title="Debugging Guide"
+        icon="bug"
+        href="/docs/tools/debugging"
+    >
+        Learn about broader debugging strategies
+    </Card>
+</CardGroup>
