--- a/docs/docs/concepts/resources.mdx
+++ b/docs/docs/concepts/resources.mdx
@@ -1,6 +1,6 @@
 ---
 title: "资源"  
-description: "将服务器数据与内容暴露给大模型使用"  
+description: "将服务端的数据与内容暴露给大模型使用"  
 ---
 
 资源（Resources）是模型上下文协议（Model Context Protocol，MCP）的核心基础组件，允许服务器暴露可被客户端读取的数据内容，作为大模型交互的上下文信息。
