--- a/docs/docs/concepts/tools.mdx
+++ b/docs/docs/concepts/tools.mdx
@@ -1,6 +1,6 @@
 ---
 title: "工具"
-description: "让大模型通过您的服务器执行操作"
+description: "让大模型通过您的服务端执行操作"
 ---
 
 工具（Tools）是模型上下文协议（MCP）中的核心功能单元，它允许服务器向客户端暴露可执行功能。通过工具，大模型能够与外部系统交互、执行计算任务并实现现实世界中的操作。
